--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/App/src/"
+            "App\\": "src/App/src/",
+            "Core\\": "src/Core/src/"
         }
     },
     "autoload-dev": {
