--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "phpserver.relativePath": "public",
-    "phpserver.router": "public/index.php"
+//    "phpserver.relativePath": "public",
+//    "phpserver.router": "public/index.php"
 }
